--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -129,6 +129,46 @@
 }
 
 
+@book{DebStrZei:2022:CRC,
+	title            = {{A}n Introduction to the {R}asch Model with Examples in {R}},
+	author           = {Debelak, Rudolf and Strobl, Carolin and Zeigenfuse, Matthew D},
+	publisher        = {Chapman \& Hall/CRC},
+	pages            = {322},
+	year             = {2022},
+	doi              = {10.1201/9781315200620},
+	url              = {https://www.taylorfrancis.com/books/mono/10.1201/9781315200620/introduction-rasch-model-examples-carolin-strobl-matthew-zeigenfuse-rudolf-debelak},
+}
 
+@Article{StrMalTut:2009:PM,
+	title            = {{A}n Introduction to Recursive Partitioning: {R}ationale, Application and Characteristics of Classification and Regression Trees, Bagging and Random Forests},
+	author           = {Strobl, Carolin and Malley, James and Tutz, Gerhard},
+	journal          = {Psychological Methods},
+	volume           = {14},
+	number           = {4},
+	pages            = {323--348},
+	year             = {2009},
+	doi              = {10.5282/ubm/epub.10589},
+}
 
+@inproceedings{FriStrZei:2014,
+	title            = {{T}o Split or to Mix? {T}ree vs. {M}ixture Models for Detecting Subgroups},
+	booktitle        = {COMPSTAT 2014 -- Proceedings in Computational Statistics},
+	author           = {Frick, Hannah and Strobl, Carolin and Zeiles, Achim},
+	editor           = {Manfred Gilli and Gil González-Rodríguez and Alicia Nieto-Reyes},
+	publisher        = {The International Statistical Institute/International Association for Statistical Computing},
+	pages            = {379--386},
+	year             = {2014},
+}
+
+@Article{FriStrZei:2015:EaPM,
+	title            = {{R}asch Mixture Models for {DIF} Detection: {A} Comparison of Old and New Score Specifications},
+	author           = {Frick, Hannah and Strobl, Carolin and Zeileis, Achim},
+	journal          = {Educational and Psychological Measurement},
+	volume           = {75},
+	number           = {2},
+	pages            = {208--234},
+	year             = {2015},
+	doi              = {10.1177/0013164414536183},
+	techreport       = {http://eeecon.uibk.ac.at/~zeileis/papers/Frick+Strobl+Zeileis-2015.pdf},
+}
 
